added build/run files for ngtcp2 implementation
added files for ngtcp2 to build the container, compile the code, run server instance and run client instance on localhost

--- a/ngtcp2/Dockerfile
+++ b/ngtcp2/Dockerfile
@@ -20,4 +20,12 @@ RUN apt-get install libev-dev -y
 
 COPY compilecode.sh /compilecode.sh
 
+COPY run-ngtcp2-server.sh /run-ngtcp2-server.sh
+
+COPY run-ngtcp2-client.sh /run-ngtcp2-client.sh
+
+COPY ngtcp2-server.key /server.key
+
+COPY ngtcp2-server.crt /server.crt
+
 CMD ["/compilecode.sh"]
