fixed issue with bootstrap.sh not finding startup-prep.sh

--- a/ngtcp2/Dockerfile
+++ b/ngtcp2/Dockerfile
@@ -35,9 +35,9 @@ WORKDIR ../
 
 RUN git clone https://github.com/moonfalir/quic-docker-builds
 
-# copy scripts over to container
-COPY server.key server.crt ./
-
 RUN chmod +x /quic-docker-builds/ngtcp2/startup-prep.sh
 
-# ENTRYPOINT ["/quic-docker-builds/ngtcp2/startup-prep.sh"]
+# copy scripts over to container
+COPY server.key server.crt ./
+ 
+ENTRYPOINT ["/quic-docker-builds/ngtcp2/startup-prep.sh"]
