fixed issue with bootstrap.sh not finding startup-prep.sh

--- a/ngtcp2/Dockerfile
+++ b/ngtcp2/Dockerfile
@@ -40,4 +40,4 @@ COPY server.key server.crt ./
 
 RUN chmod +x /quic-docker-builds/ngtcp2/startup-prep.sh
 
-# ENTRYPOINT ["/quic-docker-builds/ngtcp2/startup-prep.sh"]
+ENTRYPOINT ["/quic-docker-builds/ngtcp2/startup-prep.sh"]
