--- a/quicker/Dockerfile
+++ b/quicker/Dockerfile
@@ -9,6 +9,13 @@ RUN apt-get update && apt-get install -y \
  make \
  python
  
+# install quicker
+RUN git clone https://github.com/rmarx/quicker
+
+WORKDIR ./quicker
+
+WORKDIR ./scripts/run-scripts
+
 # install specific node js
 RUN git clone https://github.com/rmarx/node
 
@@ -18,16 +25,9 @@ RUN ./configure && make && make install
 
 WORKDIR ../
 
-# install quicker
-RUN git clone https://github.com/rmarx/quicker
-
-WORKDIR ./quicker
-
-RUN npm install
-
 # clone scripts repo
 
-WORKDIR ../
+WORKDIR /
 
 RUN git clone https://github.com/moonfalir/quic-docker-builds
 
