finished docker build + add crt and key for server

--- a/quicly/Dockerfile
+++ b/quicly/Dockerfile
@@ -24,11 +24,14 @@ WORKDIR ../
 
 # clone and build quicly
 
-RUN git clone https://github.com/h2o/quicly
+RUN git clone --recurse-submodules https://github.com/h2o/quicly
 
 WORKDIR ./quicly 
 
-RUN PKG_CONFIG_PATH=$PWD/../openssl/build/lib/pkgconfig cmake && make && make check
+RUN PKG_CONFIG_PATH=/openssl/build/lib/pkgconfig cmake . && make check
+
+# copy scripts over to container
+COPY server.key server.crt ./
 
 # clone scripts repo
 
@@ -37,8 +40,5 @@ WORKDIR ../
 RUN git clone https://github.com/moonfalir/quic-docker-builds
 
 RUN chmod +x /quic-docker-builds/quicly/startup-prep.sh
-
-# copy scripts over to container
-COPY server.key server.crt ./
 
 ENTRYPOINT ["/quic-docker-builds/quicly/startup-prep.sh"]
